# easy-mock

./: .gitignore
cmake/: Conan.cmake
scripts/: main.lua
src/: CMakeLists.txt  common.h  dashboard.cpp  dashboard.h  gui.cpp  gui.h  luainterface.cpp  luainterface.h  main.cpp  widgets.cpp  widgets.h
